--- a/src/main/resources/templates/admin/topic/topic.html
+++ b/src/main/resources/templates/admin/topic/topic.html
@@ -28,7 +28,7 @@
 					<!-- /.ace-settings-container -->
 
 					<div class="page-header">
-						<form th:action="@{/admin/product/create}">
+						<form th:action="@{/admin/topic/create}">
 							<button class="btn btn-info">Create</button>
 						</form>
 
@@ -49,13 +49,7 @@
 														type="checkbox" class="ace" /> <span class="lbl"></span>
 												</label></th>
 												<th>Name</th>
-												<th>Image</th>
-												<th>Price</th>
-
-
-												<th><i
-													class="ace-icon fa fa-clock-o bigger-110 hidden-480"></i>
-													Status</th>
+												
 												<th class="hidden-480">Function</th>
 
 
@@ -63,20 +57,15 @@
 										</thead>
 
 										<tbody>
-											<tr th:each="production : ${model.listResult}">
+											<tr th:each="topic : ${topic.listResult}" th:if="${topic.name!='option'}">
 
 
 												<td class="center"><label class="pos-rel"> <input
 														type="checkbox" class="ace" /> <span class="lbl"></span>
 												</label></td>
 
-												<td th:text="${production.name}"></td>
-												<td><img style="width: 80px; height: 80px;"
-													th:src="@{${production.image_1}}"></td>
-												<td th:text="${production.price}" class="hidden-480"></td>
-
-												<td th:text="${production.status}" class="hidden-480"><span
-													class="label label-sm label-warning"></span></td>
+												<td  th:text="${topic.name}"></td>
+																								
 
 												<td>
 													<div class="hidden-sm hidden-xs btn-group">
@@ -84,13 +73,13 @@
 
 														<button class="btn btn-xs btn-info">
 															<i class="ace-icon fa fa-pencil bigger-120"><a
-																th:href="@{/admin/product/edit/{id}(id =${production.id})}">Edit</a></i>
+																th:href="@{/admin/topic/edit/{id} (id=${topic.id})}">Edit</a></i>
 														</button>
 
 
 														<button class="btn btn-xs btn-danger">
 															<i class="ace-icon fa fa-trash bigger-120"><a
-																th:href="@{/admin/product/delete/{id}(id=${production.id})}"
+																th:href="@{/admin/topic/delete/{id}(id=${topic.id})}"
 																class="tooltip-error" data-rel="tooltip" title="Delete">
 																	Delete</a></i>
 														</button>
@@ -131,7 +120,7 @@
 
 										</tbody>
 									</table>
-									<ul class="pagination pagination-lg"
+									<!--<ul class="pagination pagination-lg"
 										th:if="${model.totalPage > 1}">
 										<li><a
 											th:if="${model.currentPage <= model.totalPage && model.currentPage>1}"
