update template and code for the client function at the index.html

--- a/src/main/resources/templates/admin/product/detail.html
+++ b/src/main/resources/templates/admin/product/detail.html
@@ -182,7 +182,7 @@
 									<div class="col-sm-9">
 										<img align="right"
 											class="col-md-15 control-label no-padding-right"
-											th:src="*{image_1}" />
+											th:src="*{image_1}" style="width: 400px; height: 400px;"/>
 									</div>
 								</div>
 								<div class="form-group">
@@ -196,7 +196,7 @@
 									<div class="col-sm-9">
 										<img align="right"
 											class="col-md-15 control-label no-padding-right"
-											th:src="*{image_2}" />
+											th:src="*{image_2}" style="width: 400px; height: 400px;"/>
 									</div>
 								</div>
 								<div class="form-group">
@@ -208,9 +208,9 @@
 											th:field="*{image_3}" />
 									</div>
 									<div class="col-sm-9">
-										<img align="right"
+										<img align="right" 
 											class="col-md-15 control-label no-padding-right"
-											th:src="*{image_3}" />
+											th:src="*{image_3}" style="width: 400px; height: 400px;"/>
 									</div>
 								</div>
 								<div class="form-group">
@@ -224,7 +224,7 @@
 									<div class="col-sm-9">
 										<img align="right"
 											class="col-md-15 control-label no-padding-right"
-											th:src="*{image_4}" />
+											th:src="*{image_4}" style="width: 400px; height: 400px;"/>
 									</div>
 								</div>
 								<div class="form-group">
