--- a/src/main/resources/templates/admin/news/detail.html
+++ b/src/main/resources/templates/admin/news/detail.html
@@ -127,7 +127,7 @@
 									<div class="col-sm-9">
 										<img align="right"
 											class="col-md-15 control-label no-padding-right"
-											th:src="*{image_1}" />
+											th:src="*{image_1}" style="width: 400px; height: 400px;"/>
 									</div>
 								</div>
 								<div class="form-group">
@@ -141,7 +141,7 @@
 									<div class="col-sm-9">
 										<img align="right"
 											class="col-md-15 control-label no-padding-right"
-											th:src="*{image_2}" />
+											th:src="*{image_2}" style="width: 400px; height: 400px;"/>
 									</div>
 								</div>
 								<div class="form-group">
@@ -155,7 +155,7 @@
 									<div class="col-sm-9">
 										<img align="right"
 											class="col-md-15 control-label no-padding-right"
-											th:src="*{image_3}" />
+											th:src="*{image_3}" style="width: 400px; height: 400px;"/>
 									</div>
 								</div>
 								<div class="form-group">
@@ -169,7 +169,7 @@
 									<div class="col-sm-9">
 										<img align="right"
 											class="col-md-15 control-label no-padding-right"
-											th:src="*{image_4}" />
+											th:src="*{image_4}" style="width: 400px; height: 400px;"/>
 									</div>
 								</div>
 								<div class="form-group">
