--- a/src/main/resources/templates/web/index.html
+++ b/src/main/resources/templates/web/index.html
@@ -1,30 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
+<head th:replace="web/fragment/fragment :: web_header">
 <meta charset="UTF-8">
-<meta name="description" content="Ogani Template">
-<meta name="keywords" content="Ogani, unica, creative, html">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Lockhongkhi</title>
 
-<!-- Google Font -->
-<link
-	href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap"
-	rel="stylesheet">
-
-<!-- Css Styles -->
-<link rel="stylesheet" href="/web/css/bootstrap.min.css" type="text/css">
-<link rel="stylesheet" href="/web/css/font-awesome.min.css"
-	type="text/css">
-<link rel="stylesheet" href="/web/css/elegant-icons.css" type="text/css">
-<link rel="stylesheet" href="/web/css/nice-select.css" type="text/css">
-<link rel="stylesheet" href="/web/css/jquery-ui.min.css" type="text/css">
-<link rel="stylesheet" href="/web/css/owl.carousel.min.css"
-	type="text/css">
-<link rel="stylesheet" href="/web/css/slicknav.min.css" type="text/css">
-<link rel="stylesheet" href="/web/css/style.css" type="text/css">
 </head>
 
 <body>
@@ -32,167 +11,7 @@
 	<div id="preloder">
 		<div class="loader"></div>
 	</div>
-
-	<!-- Humberger Begin -->
-	<div class="humberger__menu__overlay"></div>
-	<div class="humberger__menu__wrapper">
-		<div class="humberger__menu__logo">
-			<a href="#"><img src="/web/img/logo.png" alt=""></a>
-		</div>
-		<div class="humberger__menu__cart">
-			<ul>
-				<li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
-				<li><a href="#"><i class="fa fa-shopping-bag"></i> <span>3</span></a></li>
-			</ul>
-
-		</div>
-		<div class="humberger__menu__widget">
-
-			<div class="header__top__right__auth">
-				<a href="#"><i class="fa fa-user"></i> Login</a>
-			</div>
-		</div>
-		<nav class="humberger__menu__nav mobile-menu">
-			<ul>
-				<li class="active"><a href="./index.html">Home</a></li>
-				<li><a href="./shop-grid.html">Shop</a></li>
-				<li><a href="#">Pages</a>
-					<ul class="header__menu__dropdown">
-						<li><a href="./shop-details.html">Shop Details</a></li>
-						<li><a href="./shoping-cart.html">Shoping Cart</a></li>
-						<li><a href="./checkout.html">Check Out</a></li>
-						<li><a href="./blog-details.html">Blog Details</a></li>
-					</ul></li>
-				<li><a href="./blog.html">Blog</a></li>
-				<li><a href="./contact.html">Contact</a></li>
-			</ul>
-		</nav>
-		<div id="mobile-menu-wrap"></div>
-		<div class="header__top__right__social">
-			<a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i
-				class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a>
-			<a href="#"><i class="fa fa-pinterest-p"></i></a>
-		</div>
-		<div class="humberger__menu__contact">
-			<ul>
-				<li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-
-			</ul>
-		</div>
-	</div>
-	<!-- Humberger End -->
-
-	<!-- Header Section Begin -->
-	<header class="header">
-		<div class="header__top">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-6 col-md-6">
-						<div class="header__top__left">
-							<ul>
-								<li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-6 col-md-6">
-						<div class="header__top__right">
-							<div class="header__top__right__social">
-								<a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i
-									class="fa fa-twitter"></i></a> <a href="#"><i
-									class="fa fa-linkedin"></i></a> <a href="#"><i
-									class="fa fa-pinterest-p"></i></a>
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3">
-					<div class="header__logo">
-						<a href="./index.html"><img src="/web/img/logo.png" alt=""></a>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<nav class="header__menu">
-						<ul>
-							<li class="active"><a href="./index.html">Trang Chủ</a></li>
-
-							<li><a href="./shop-grid.html">Cửa Hàng</a></li>
-							<li><a href="./blog.html">Tin Tức</a>
-								<ul class="header__menu__dropdown">
-									<li><a href="./shop-details.html">Shop Details</a></li>
-								</ul></li>
-
-							<li><a href="./contact.html">Liên Hệ</a></li>
-						</ul>
-					</nav>
-				</div>
-
-			</div>
-			<div class="humberger__open">
-				<i class="fa fa-bars"></i>
-			</div>
-		</div>
-	</header>
-	<!-- Header Section End -->
-
-	<!-- Hero Section Begin -->
-	<section class="hero">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3">
-					<div class="hero__categories">
-						<div class="hero__categories__all">
-							<i class="fa fa-bars"></i> <span>Phân Loại</span>
-						</div>
-						<ul th:each="category : ${categoryList.listResult}">
-							<li><a href="#" th:text="${category.name}"></a></li>
-						</ul>
-
-					</div>
-				</div>
-				<div class="col-lg-9">
-					<div class="hero__search">
-						<div class="hero__search__form">
-							<form action="#">
-								<div class="hero__search__categories">
-									Phân Loại <span class="arrow_carrot-down"></span>
-								</div>
-								<input type="text" placeholder="Bạn cần tím kiếm gì?">
-								<button type="submit" class="site-btn">Tìm kiếm</button>
-							</form>
-						</div>
-						<div class="hero__search__phone">
-							<div class="hero__search__phone__icon">
-								<i class="fa fa-phone"></i>
-							</div>
-							<div class="hero__search__phone__text">
-								<h5>+65 11.188.888</h5>
-								<span>Hỗ trợ 24/7</span>
-							</div>
-						</div>
-					</div>
-					<div class="hero__item set-bg"
-						data-setbg="/web/img/hero/banner.jpg">
-						<div class="hero__text">
-							<span>FRUIT FRESH</span>
-							<h2>
-								Vegetable <br />100% Organic
-							</h2>
-							<p>Free Pickup and Delivery Available</p>
-							<a href="#" class="primary-btn">Mua Sắm</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Hero Section End -->
-
+	<div th:replace="web/fragment/fragment :: web_menu_index"></div>
 	<!-- Categories Section Begin -->
 	<section class="categories">
 		<div class="container">
@@ -221,6 +40,7 @@
 		</div>
 	</section>
 	<!-- Categories Section End -->
+
 
 	<!-- Featured Section Begin -->
 	<section class="featured spad">
@@ -399,75 +219,7 @@
 	</section>
 	<!-- Blog Section End -->
 
-	<!-- Footer Section Begin -->
-	<footer class="footer spad">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-md-6 col-sm-6">
-					<div class="footer__about">
-						<div class="footer__about__logo">
-							<a href="./index.html"><img src="/web/img/logo.png" alt=""></a>
-						</div>
-						<ul>
-							<li>Address: 60-49 Road 11378 New York</li>
-							<li>Phone: +65 11.188.888</li>
-							<li>Email: hello@colorlib.com</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
-					<div class="footer__widget">
-						<h6>Useful Links</h6>
-						<ul>
-							<li><a href="#">About Us</a></li>
-							<li><a href="#">About Our Shop</a></li>
-							<li><a href="#">Secure Shopping</a></li>
-							<li><a href="#">Delivery infomation</a></li>
-							<li><a href="#">Privacy Policy</a></li>
-							<li><a href="#">Our Sitemap</a></li>
-						</ul>
-						<ul>
-							<li><a href="#">Who We Are</a></li>
-							<li><a href="#">Our Services</a></li>
-							<li><a href="#">Projects</a></li>
-							<li><a href="#">Contact</a></li>
-							<li><a href="#">Innovation</a></li>
-							<li><a href="#">Testimonials</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-12">
-					<div class="footer__widget">
-						<h6>Join Our Newsletter Now</h6>
-						<p>Get E-mail updates about our latest shop and special
-							offers.</p>
-						<form action="#">
-							<input type="text" placeholder="Enter your mail">
-							<button type="submit" class="site-btn">Subscribe</button>
-						</form>
-						<div class="footer__widget__social">
-							<a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i
-								class="fa fa-instagram"></i></a> <a href="#"><i
-								class="fa fa-twitter"></i></a> <a href="#"><i
-								class="fa fa-pinterest"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</footer>
-	<!-- Footer Section End -->
-
-	<!-- Js Plugins -->
-	<script src="/web/js/jquery-3.3.1.min.js"></script>
-	<script src="/web/js/bootstrap.min.js"></script>
-	<script src="/web/js/jquery.nice-select.min.js"></script>
-	<script src="/web/js/jquery-ui.min.js"></script>
-	<script src="/web/js/jquery.slicknav.js"></script>
-	<script src="/web/js/mixitup.min.js"></script>
-	<script src="/web/js/owl.carousel.min.js"></script>
-	<script src="/web/js/main.js"></script>
+	<div th:replace="web/fragment/fragment :: web_footer"></div>
 
 
 
